--- a/index.html
+++ b/index.html
@@ -33,8 +33,25 @@
                         </div>
                     </div>
                 </div>
-                <div id="nivel1-01" style="display: none;">
-                    <h1 style="text-align: center; color: rgb(117, 0, 0); margin-top: 10px; font-weight: bold;">Nivel 1 - 1</h1>
+
+                <div id="nombrejugador" style="display: none;">
+                    <h1 style="text-align: center; color: rgb(117, 0, 0); margin-top: 10px; font-weight: bold;">Por favor Ingrese un nombre</h1>
+                    <br>
+                    <br>
+                    <div class="form-floating" style="width: 80%; height: 70%; position:relative; top:50%; margin: 0 auto;">
+                        <input class="form-control" type="text" placeholder="Default input" aria-label="default input example">
+                        <label for="floatingTextarea">Nombre del Jugador</label>
+                        <br>
+                        <button type="button" class="btn btn-danger btn-lg" style="position:relative; top:50%; left:50%; margin: -20px -50px;" onclick="">Siguiente</button>
+                    </div>
+                </div>
+
+                <div id="selectnivel" style="display: none;">
+                    <h1 style="text-align: center; color: rgb(117, 0, 0); margin-top: 10px; font-weight: bold;">Seleccione Nivel de Dificultad</h1>
+                    <br>
+                    <button type="button" class="btn btn-danger btn-lg" style="position:relative; top:50%; left:50%; margin: -20px -50px;" onclick="">Fácil</button>
+                    <button type="button" class="btn btn-danger btn-lg" style="position:relative; top:50%; left:50%; margin: -20px -50px;" onclick="">Intermedio</button>
+                    <button type="button" class="btn btn-danger btn-lg" style="position:relative; top:50%; left:50%; margin: -20px -50px;" onclick="">Dificil</button>
                 </div>
             </div>
         </div>
