--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="grid-buttons ">
                             <div class="button1 transformed ">
                                 <div class="icon"><i class="fa fa-play-circle fa-7x"></i></div>
-                                <button class="btn btn-danger " type="button " id="Jugar " onclick=""> <a href="/jugando.html" style="color: white;">Jugar</a></button>
+                                <button class="btn btn-danger " type="button " id="Jugar " onclick="inicializar_preguntas()"> <a href="/mapa.html" style="color: white;">Jugar</a></button>
                             </div>
                             <button class="btn btn-danger button2 transformed " type="button "><i class="fa fa-level-up " aria-hidden="true "></i> Niveles</button>
                             <button class="btn btn-danger button3 transformed " type="button "><i class="fa fa-times " aria-hidden="true "></i> Salir</button>
@@ -58,6 +58,7 @@
         </div>
     </div>
     <script src="/js/funciones.js "></script>
+    <script src="/js/data.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
 </body>
 
