--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <br><br><br><br><br><br>
                         <div class="grid-buttons ">
                             <div class="button1 transformed ">
-                                <div class="icon"><i class="fa fa-play-circle fa-7x"></i></div>
-                                <button class="btn btn-danger " type="button " id="Jugar " onclick=""> <a href="/jugando.html" style="color: white;">Jugar</a></button>
+                                <div class="icon" onclick="window.location.href='./nombre_jugador.html'"><i class="fa fa-play-circle fa-7x"></i></div>
+                                <button class="btn btn-danger " type="button " id="Jugar " onclick="window.location.href='./nombre_jugador.html'"> Jugar</button>
                             </div>
                             <button class="btn btn-danger button2 transformed " type="button "><i class="fa fa-level-up " aria-hidden="true "></i> Niveles</button>
                             <button class="btn btn-danger button3 transformed " type="button "><i class="fa fa-times " aria-hidden="true "></i> Salir</button>
