--- a/nombre_jugador.html
+++ b/nombre_jugador.html
@@ -31,12 +31,13 @@
                         </label>
                         <span id="text_fm"></span>
                     </div>
-                    <button onclick="window.location.href='./jugando.html'">Siguiente</button>
+                    <button onclick="inicializar_preguntas();window.location.href='./mapa.html'">Siguiente</button>
                 </div>             
             </div>
         </div>
     </div>
     <script src="/js/funciones.js "></script>
+    <script src="/js/data.js "></script>
     <script src="/js/nombre_jugador.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
 </body>
