--- a/jugando.html
+++ b/jugando.html
@@ -147,6 +147,9 @@
                     const pregunta = nivel.preguntas[j];
                     if (pregunta.nro == pregunta_inicial) {
                         pregunta.unlook = true
+                            /* if () {
+                                pregunta.good=true
+                            } */
                     }
                 }
             }
