--- a/jugando.html
+++ b/jugando.html
@@ -118,6 +118,7 @@
         const puntiacionBar = document.querySelector('#puntiacionBar')
         const question = getPregunta(pregunta_inicial);
         const span = document.createElement('span')
+        var respuestaCorrect = false;
         span.textContent = question.pregunta
         puntiacionBar.style.width = (Number(puntiacion) / 3) * 100 + '%'
         if (Number(puntiacion) > 0) {
@@ -147,9 +148,9 @@
                     const pregunta = nivel.preguntas[j];
                     if (pregunta.nro == pregunta_inicial) {
                         pregunta.unlook = true
-                            /* if () {
-                                pregunta.good=true
-                            } */
+                        if (respuestaCorrect) {
+                            pregunta.good = true
+                        }
                     }
                 }
             }
@@ -158,7 +159,7 @@
 
         function validarRespuesta(correcto, posicion) {
             const respuestas = document.getElementsByClassName('respuesta')
-            desbloquearPreguntas()
+
             for (let i = 0; i < respuestas.length; i++) {
                 const resp = respuestas[i];
                 console.log(resp);
@@ -180,13 +181,16 @@
 
             }
             if (correcto) {
-                //alert('marcaste la correcta')
+                respuestaCorrect = true
+                desbloquearPreguntas()
+                    //alert('marcaste la correcta')
                 meta()
                 setTimeout(() => {
                     location.reload()
                 }, 5000)
             } else {
-                //alert('marcaste la incorrecta')
+                desbloquearPreguntas()
+                    //alert('marcaste la incorrecta')
                 setTimeout(() => {
                     location.reload()
                 }, 5000)
